samples/_failures_safe/1761305825_2c7ff9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_065341e2.c: In function ‘main’:
./samples/SAFE/__tmp_065341e2.c:142:27: error: expected ‘)’ at end of input
  142 |                    entries
      |                           ^
      |                           )
./samples/SAFE/__tmp_065341e2.c:139:19: note: to match this ‘(’
  139 |             printf("%s [%-8s] %s\n",
      |                   ^
./samples/SAFE/__tmp_065341e2.c:142:20: error: expected declaration or statement at end of input
  142 |                    entries
      |                    ^~~~~~~
./samples/SAFE/__tmp_065341e2.c:142:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_065341e2.c:142:20: error: expected declaration or statement at end of input
